# SnSm

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/: FourierTransform.hpp  Irrep.hpp  rationalscalar.hpp
python/: fourier_bindings.cpp  setup.py
